--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,19 +1,21 @@
 *{
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 
 body{
-    background-color: #e5e5e5;
+    background-color: #F3F3F3;
     width: 100vw;
     height: 100vh;
+    font-size: 14px;
 }
 
 header, footer{
     background-color: #fff;
     width: 100%;
     height: 80px;
-    position: fixed;
+    position: sticky;
     left: 0;
 }
 
@@ -59,4 +61,48 @@ footer{
     font-size: 18px;
     font-style: italic;
     border: none;
+}
+
+.footer-content >input:focus{
+    outline: none;
+}
+
+.messages-box{
+    display: flex;
+    flex-direction: column;
+    margin: 26px 0;
+    gap: 4px;
+}
+
+.message-display{
+    min-height: 40px;
+    height: inherit;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border-radius: 2px;
+}
+
+.message{
+    background-color: #fff;
+}
+
+.status{
+    background-color: #DCDCDC;
+}
+
+.private-message{
+    background-color: #FFDEDE;
+}
+
+.time{
+    color: #aaaaaa;
+}
+
+.name{
+    font-weight: 700;
+}
+
+span{
+    font-weight: normal;
 }
