--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -21,6 +21,7 @@ header, footer{
 
 header{
     top: 0;
+    position: fixed;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
     display: flex;
     align-items: center;
@@ -50,6 +51,7 @@ footer{
 }
 
 .footer-content > ion-icon{
+    cursor: pointer;
     font-size: 26px;
 }
 
@@ -70,7 +72,7 @@ footer{
 .messages-box{
     display: flex;
     flex-direction: column;
-    margin: 26px 0;
+    margin: 106px 0 26px 0;
     gap: 4px;
 }
 
@@ -91,7 +93,7 @@ footer{
     background-color: #DCDCDC;
 }
 
-.private-message{
+.private_message{
     background-color: #FFDEDE;
 }
 
