--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -167,18 +167,21 @@ aside{
     right: 0;
     position: fixed;
     background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: space-between;
 }
 
 aside > nav {
     left: calc(100vw - 270px);
-    position: relative;
+    /* position: relative; */
     background-color: #FFF;
-    width: 259px;
+    width: 300px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: start;
+    margin: 0;
 }
 nav > .side-title {
     text-align: center;
@@ -228,4 +231,9 @@ nav > .side-title {
 
 .option > .check{
     display:inline
+}
+
+.transparent{
+    width: 70%;
+    height: 100%;
 }
