--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,13 +15,12 @@ header, footer{
     background-color: #fff;
     width: 100%;
     height: 80px;
-    position: sticky;
+    position: fixed;
     left: 0;
 }
 
 header{
     top: 0;
-    position: fixed;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
     display: flex;
     align-items: center;
@@ -37,6 +36,10 @@ nav, .footer-content{
 
 nav > ion-icon{
     font-size: 42px;
+}
+
+main{
+    padding-bottom: 80px;
 }
 
 footer{
