fixed checked options

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -207,6 +207,7 @@ nav > .side-title {
     width: 100%;
     display: flex;
     justify-content: space-between;    
+    align-items: center;
 }
 
 .option >div> ion-icon{
