--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -38,6 +38,10 @@ nav > ion-icon{
     font-size: 42px;
 }
 
+header>nav>ion-icon{
+    cursor: pointer;
+}
+
 main{
     padding-bottom: 80px;
     overflow-y: hidden;
@@ -239,6 +243,7 @@ nav > .side-title {
 }
 
 .option{
+    cursor: pointer;
     width: 100%;
     display: flex;
     justify-content: space-between;    
@@ -267,6 +272,10 @@ nav > .side-title {
     display: none;
 }
 
+.green_border{
+    /* border-bottom: 2px solid #28BB25; */
+    box-shadow: 0px 2px 2px #28BB25;
+}
 
 .option > .check{
     display:inline
